# wintomac

./: sshkey  sshkey.pub  test.txt
Batch/: batch.py
BlobTrigger/: BlobTrigger.py  function_app.py  requirements.txt
BlobTriggerdl/: function_app.py  samplesheet.csv
ConnectToVM/: ConnectToVM.py  ShutDownVM.py
CreateFunc/: Hello_Fatemeh.txt  function_app.py
GitHub-Docker/: Dockerfile  Dominik_Dockerfile.txt  Fatemeh_test_Dockerfile_Function.txt  Github-Docker-CheckCommit.py  Github-Docker-CheckUpdate.py  Github-Docker.py
NextFlowPipelineOrchestrator/: NPO_v1.py  NextflowPipelineOrchestrator.py  batch_creation.py  demo.py  kv_update.py  net-st.py  nextflow.config  nextflow1.config  requirements.txt  st_creation.py  test.config  vm_creation.py
Pass-To-Nexflow/: function_app.py  requirements.txt
azure-launch-pipeline/: .gitignore  README.md  add-dataset-and-launch-pipeline.py  archive.sh  launch-pipeline.py  pyproject.toml  test.csv
azure-launch-pipeline/seqera/: datasets.py  datasets.py:Zone.Identifier  pipeline.py  seqera.py  utils.py
clearup-azure-jobs/: README.md  clearup-azure-batch-jobs.py  requirements.txt
create-dl-batch/: credentials.json  function_app.py  requirements.txt  test.py
data_engineer/: YourFirstName-YourLastName.csv  requirements.txt  test_fatemeh.py
data_lake/: datalake_inventory_miseq01.ipynb  datalake_inventory_nextseq01.ipynb  datalake_inventory_samples.ipynb  repos.code-workspace
decom-tar/: function_app.py
decom-tarfile/: function_app.py
jupyter/: Creat_VNET_NIC_VM.py  requirements.txt
tar-test/: test.tar  untar.py  (+4 more)
(+268 files in other folders)
